--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ table {
 
 td,
 th {
-  border: 1px solid #dddddd;
+  border: 1px solid darkgrey;
   text-align: left;
   padding: 8px;
   word-wrap: break-word;
@@ -18,7 +18,7 @@ tr:nth-child(even) {
 }
 
 .breedTableDiv {
-  height: 400px;
+  height: 500px;
   overflow: auto;
   margin: auto;
   width: 75%;
@@ -32,4 +32,9 @@ tr:nth-child(even) {
   color: blue;
   text-decoration: underline;
   cursor: pointer;
+}
+
+img {
+  max-width: 200px;
+  height: auto;
 }
